Updated using Colaboratory

--- a/lab1/Part1_TensorFlow.ipynb
+++ b/lab1/Part1_TensorFlow.ipynb
@@ -63,7 +63,7 @@
         "# http://introtodeeplearning.com\n",
         "#"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -87,7 +87,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LkaimNJfYZ2w"
+        "id": "LkaimNJfYZ2w",
+        "outputId": "e7e952a7-4967-4dca-d87c-c1b29eb7c137",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%tensorflow_version 2.x\n",
@@ -100,8 +104,33 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting mitdeeplearning\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9d/ad/650eb53c0d9d1213536fe94bc150f89b564ff5ee784bd662272584bb091b/mitdeeplearning-0.2.0.tar.gz (2.1MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.1MB 2.1MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (1.19.5)\n",
+            "Requirement already satisfied: regex in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (2019.12.20)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (4.41.1)\n",
+            "Requirement already satisfied: gym in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (0.17.3)\n",
+            "Requirement already satisfied: pyglet<=1.5.0,>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from gym->mitdeeplearning) (1.5.0)\n",
+            "Requirement already satisfied: cloudpickle<1.7.0,>=1.2.0 in /usr/local/lib/python3.7/dist-packages (from gym->mitdeeplearning) (1.3.0)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from gym->mitdeeplearning) (1.4.1)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from pyglet<=1.5.0,>=1.4.0->gym->mitdeeplearning) (0.16.0)\n",
+            "Building wheels for collected packages: mitdeeplearning\n",
+            "  Building wheel for mitdeeplearning (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for mitdeeplearning: filename=mitdeeplearning-0.2.0-cp37-none-any.whl size=2115442 sha256=75d2508eb672af4da36ea6cde382a059383c4ce337c3a13e49884c419c9b1bc7\n",
+            "  Stored in directory: /root/.cache/pip/wheels/af/dc/2a/5c3633135e7e4ef4fd31463cfa1942cb1bae7486ab94e7a2ad\n",
+            "Successfully built mitdeeplearning\n",
+            "Installing collected packages: mitdeeplearning\n",
+            "Successfully installed mitdeeplearning-0.2.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -121,7 +150,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tFxztZQInlAB"
+        "id": "tFxztZQInlAB",
+        "outputId": "02f8a432-4ace-4e8b-d564-936c4d4ce5b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "sport = tf.constant(\"Tennis\", tf.string)\n",
@@ -130,8 +163,17 @@
         "print(\"`sport` is a {}-d Tensor\".format(tf.rank(sport).numpy()))\n",
         "print(\"`number` is a {}-d Tensor\".format(tf.rank(number).numpy()))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "`sport` is a 0-d Tensor\n",
+            "`number` is a 0-d Tensor\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -145,7 +187,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oaHXABe8oPcO"
+        "id": "oaHXABe8oPcO",
+        "outputId": "fea1375f-ac5c-45fd-ccce-e2a6f741d81e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "sports = tf.constant([\"Tennis\", \"Basketball\"], tf.string)\n",
@@ -154,8 +200,17 @@
         "print(\"`sports` is a {}-d Tensor with shape: {}\".format(tf.rank(sports).numpy(), tf.shape(sports)))\n",
         "print(\"`numbers` is a {}-d Tensor with shape: {}\".format(tf.rank(numbers).numpy(), tf.shape(numbers)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "`sports` is a 1-d Tensor with shape: [2]\n",
+            "`numbers` is a 1-d Tensor with shape: [3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -169,19 +224,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tFeBBe1IouS3"
+        "id": "tFeBBe1IouS3",
+        "outputId": "f269b5b8-7040-4568-c935-ae57f2757c69",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "### Defining higher-order Tensors ###\n",
         "\n",
-        "'''TODO: Define a 2-d Tensor'''\n",
-        "matrix = # TODO\n",
+        "matrix = tf.constant([[\"Sports\", \"Ball\"],[\"Tennis\", \"Basketball\"]], tf.string)\n",
         "\n",
         "assert isinstance(matrix, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
-        "assert tf.rank(matrix).numpy() == 2"
+        "assert tf.rank(matrix).numpy() == 2\n",
+        "print(\"`matrix` is a {}-d Tensor with shape: {}\".format(tf.rank(matrix).numpy(), tf.shape(matrix)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "`matrix` is a 2-d Tensor with shape: [2 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -189,16 +256,15 @@
         "id": "Zv1fTn_Ya_cz"
       },
       "source": [
-        "'''TODO: Define a 4-d Tensor.'''\n",
         "# Use tf.zeros to initialize a 4-d Tensor of zeros with size 10 x 256 x 256 x 3. \n",
         "#   You can think of this as 10 images where each image is RGB 256 x 256.\n",
-        "images = # TODO\n",
+        "images = tf.zeros([10, 256, 256, 3])\n",
         "\n",
         "assert isinstance(images, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
         "assert tf.rank(images).numpy() == 4, \"matrix must be of rank 4\"\n",
         "assert tf.shape(images).numpy().tolist() == [10, 256, 256, 3], \"matrix is incorrect shape\""
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -213,19 +279,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FhaufyObuLEG"
+        "id": "FhaufyObuLEG",
+        "outputId": "d50e00d6-99f9-4ea5-b0a5-0b8046420ff4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "row_vector = matrix[1]\n",
-        "column_vector = matrix[:,2]\n",
-        "scalar = matrix[1, 2]\n",
+        "column_vector = matrix[:,1]\n",
+        "scalar = matrix[1, 1]\n",
         "\n",
         "print(\"`row_vector`: {}\".format(row_vector.numpy()))\n",
         "print(\"`column_vector`: {}\".format(column_vector.numpy()))\n",
         "print(\"`scalar`: {}\".format(scalar.numpy()))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "`row_vector`: [b'Tennis' b'Basketball']\n",
+            "`column_vector`: [b'Ball' b'Basketball']\n",
+            "`scalar`: b'Basketball'\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -243,7 +323,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X_YJrZsxYZ2z"
+        "id": "X_YJrZsxYZ2z",
+        "outputId": "6a825618-e13f-4596-9a1c-ea8cf9d694b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Create the nodes in the graph, and initialize values\n",
@@ -256,8 +340,17 @@
         "print(c1)\n",
         "print(c2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tf.Tensor(76, shape=(), dtype=int32)\n",
+            "tf.Tensor(76, shape=(), dtype=int32)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -287,13 +380,12 @@
         "\n",
         "# Construct a simple computation function\n",
         "def func(a,b):\n",
-        "  '''TODO: Define the operation for c, d, e (use tf.add, tf.subtract, tf.multiply).'''\n",
-        "  c = # TODO\n",
-        "  d = # TODO\n",
-        "  e = # TODO\n",
+        "  c = tf.add(a,b)\n",
+        "  d = tf.subtract(b,1)\n",
+        "  e = tf.multiply(c,d)\n",
         "  return e"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -308,7 +400,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pnwsf8w2uF7p"
+        "id": "pnwsf8w2uF7p",
+        "outputId": "05d7a707-4140-4b23-ef88-6083e9b4e42c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Consider example values for a,b\n",
@@ -317,8 +413,16 @@
         "e_out = func(a,b)\n",
         "print(e_out)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tf.Tensor(6.0, shape=(), dtype=float32)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -348,7 +452,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HutbJk-1kHPh"
+        "id": "HutbJk-1kHPh",
+        "outputId": "b2acf4fc-86f6-46da-bb9a-69cec6ef2d58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "### Defining a network Layer ###\n",
@@ -370,11 +478,9 @@
         "    self.b = self.add_weight(\"bias\", shape=[1, self.n_output_nodes]) # note the dimensionality\n",
         "\n",
         "  def call(self, x):\n",
-        "    '''TODO: define the operation for z (hint: use tf.matmul)'''\n",
-        "    z = # TODO\n",
+        "    z = tf.add(tf.matmul(x,self.W), self.b)\n",
         "\n",
-        "    '''TODO: define the operation for out (hint: use tf.sigmoid)'''\n",
-        "    y = # TODO\n",
+        "    y = tf.sigmoid(z)\n",
         "    return y\n",
         "\n",
         "# Since layer parameters are initialized randomly, we will set a random seed for reproducibility\n",
@@ -388,8 +494,29 @@
         "print(y.numpy())\n",
         "mdl.lab1.test_custom_dense_layer_output(y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0.2697859  0.45750412 0.66536945]]\n",
+            "[PASS] test_custom_dense_layer_output\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
